# lastfm-rust

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker-image.yml
src/: httpclient.rs  main.rs  websocket.rs
