[package]
name = "lastfm-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
